--- a/pages/details.html
+++ b/pages/details.html
@@ -1,5 +1,5 @@
 <div class="container-fluid header text-center">
-  <h3>Match Details</h3>
+  <h3>League Detail Page</h3>
 </div>
 <ul class="nav nav-tabs">
 <li class="active"><a href="#">Team</a>
@@ -23,7 +23,7 @@
 </li>
 
 
-<li class="active"><a href="#">Team</a>
+<li class="active"><a href="#">Points Table</a>
   <div class ="row">
     <div class="col-md-6 col-md-offset-3" id="result">
       <table class="table table-striped table-hover ">
@@ -33,9 +33,10 @@
             </tr>
           </thead>
           <tbody>
-          <tr ng-repeat = "m in dc.detailsResponse.teams">
-            <th><center><a href="#" ng-click="" >{{m.name}}</a></center></th>
-            <th><img ng-src="{{m.crestUrl}}" class="img-responsive" width="245" height="236"></th>
+          <tr ng-repeat = "p in dc.pointsResponse">
+            <td><center><a href="#/leaguedetails/{{n.id}}" ng-click="" >{{p.caption}}</a></center></td>
+            <td><center><a href="#/leaguedetails/:uniqId" ng-click="" >{{p.numberOfTeams}}</a></center></td>
+            <td><center><a href="#/leaguedetails/:uniqId" ng-click="" >{{p.numberOfGames}}</a></center></td>
           </tr>
           </tbody>
         </table>
