Cosmetic changes to Match Detail Page

--- a/pages/landing.html
+++ b/pages/landing.html
@@ -20,7 +20,7 @@
               </tr>
             </thead>
             <tbody>
-                  <tr ng-repeat = "n in vh.pointsResponse">
+                  <tr ng-repeat = "n in vh.footballResponse">
                 <td><center><a href="#/leaguedetails/{{n.id}}" ng-click="" >{{n.caption}}</a></center></td>
                 <td><center><a href="#/leaguedetails/:uniqId" ng-click="" >{{n.numberOfTeams}}</a></center></td>
                 <td><center><a href="#/leaguedetails/:uniqId" ng-click="" >{{n.numberOfGames}}</a></center></td>
