--- a/pages/details.html
+++ b/pages/details.html
@@ -1,56 +1,57 @@
-<div class="container-fluid header text-center">
-  <h3>League Detail Page</h3>
-</div>
-<ul class="nav nav-tabs">
-<li class="active"><a href="#">Team</a>
-<div class ="row">
-  <div class="col-md-6 col-md-offset-3" id="result">
-    <table class="table table-striped table-hover ">
-        <thead>
-          <tr>
-            <th><center>Teams</center></th>
-          </tr>
-        </thead>
-        <tbody>
-        <tr ng-repeat = "m in dc.detailsResponse.teams">
-          <th><center><a href="#" ng-click="" >{{m.name}}</a></center></th>
-          <th><img ng-src="{{m.crestUrl}}" class="img-responsive" width="300" height="270"></th>
-        </tr>
-        </tbody>
-      </table>
+  <div class="container-fluid header text-center">
+    <h3>League Detail Page</h3>
   </div>
-</div>
-</li>
-
-
-<li class="active"><a href="#">Points Table</a>
-  <div class ="row">
-    <div class="col-md-8 col-md-offset-3" id="result">
-      <table class="table table-striped table-hover ">
-          <thead>
-            <tr>
-              <th><center>Position</center></th>
-              <th><center>Teams</center></th>
-              <th><center></center></th>
-              <th><center>Wins</center></th>
-              <th><center>Loss</center></th>
-              <th><center>Goals</center></th>
-              <th><center>Points</center></th>
+  <ul class="nav nav-tabs">
+    <li class="active"><a href="#">Teams</a>
+      <div class ="row">
+        <div class="col-md-5 col-md-offset-2" id="result">
+          <table align = "center" class="table table-striped table-hover ">
+            <thead>
+              <tr>
+                <th><center>Teams</center></th>
+              </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat = "m in dc.detailsResponse.teams">
+              <th><img ng-src="{{m.crestUrl}}" class="img-responsive" width="240" height="270"></th>
+              <th><center><a href="#/teamdetails/{{m.id}}" ng-click="" >{{m.name}}</a></center></th>
+              <td><center><a href="#/teamdetails/:uniqId" ng-click="" >{{m.code}}</a></center></td>
+              <td><center><a href="#/teamdetails/:uniqId" ng-click="" >{{m.shortName}}</a></center></td>
+              <td><center><a href="#/teamdetails/:uniqId" ng-click="" >{{m.squadMarketValue}}</a></center></td>
             </tr>
-          </thead>
-          <tbody>
-          <tr ng-repeat = "p in dc.pointsResponse.standing">
-            <td><center><a href="#/leaguedetails/:uniqId" ng-click="" >{{p.position}}</a></center></td>
-            <td><center><a href="#/leaguedetails/{{n.id}}" ng-click="" >{{p.teamName}}</a></center></td>
-            <td><img ng-src="{{p.crestURI}}" class="img-responsive" width="300" height="270"></td>
-            <td><center><a href="#/leaguedetails/:uniqId" ng-click="" >{{p.wins}}</a></center></td>
-            <td><center><a href="#/leaguedetails/:uniqId" ng-click="" >{{p.losses}}</a></center></td>
-            <td><center><a href="#/leaguedetails/:uniqId" ng-click="" >{{p.goals}}</a></center></td>
-            <td><center><a href="#/leaguedetails/:uniqId" ng-click="" >{{p.points}}</a></center></td>
-          </tr>
-          </tbody>
-        </table>
-    </div>
-  </div>
-</li>
-</ul>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </li>
+    <li class="active"><a href="#">Points Table</a>
+      <div class ="row">
+        <div class="col-md-5 col-md-offset-2" id="result">
+          <table class="table table-striped table-hover ">
+            <thead>
+              <tr>
+                <th><center>Position</center></th>
+                <th><center>Teams</center></th>
+                <th><center>Logo</center></th>
+                <th><center>Won</center></th>
+                <th><center>Loss</center></th>
+                <th><center>Goals</center></th>
+                <th><center>Points</center></th>
+              </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat = "p in dc.pointsResponse.standing">
+              <td><center><a href="#/teamdetails/:uniqId" ng-click="" >{{p.position}}</a></center></td>
+              <td><center><a href="#/teamdetails/{{n.id}}" ng-click="" >{{p.teamName}}</a></center></td>
+              <td><img ng-src="{{p.crestURI}}" class="img-responsive" width="240" height="270"></td>
+              <td><center><a href="#/teamdetails/:uniqId" ng-click="" >{{p.wins}}</a></center></td>
+              <td><center><a href="#/teamdetails/:uniqId" ng-click="" >{{p.losses}}</a></center></td>
+              <td><center><a href="#/teamdetails/:uniqId" ng-click="" >{{p.goals}}</a></center></td>
+              <td><center><a href="#/teamdetails/:uniqId" ng-click="" >{{p.points}}</a></center></td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </li>
+  </ul>
