--- a/pages/landing.html
+++ b/pages/landing.html
@@ -1,6 +1,6 @@
 <nav class="nav navbar-inverse">
  <div class="container">
-   <h2>Football App</h2>
+   <center><h2>Football App</h2> <center>
  </div>
 </nav>
 
